24.1.1 (12-08-2019)
- Improvement: On person creation, create physical address only when physical address data is not empty

24.1.0 (31-07-2019)
- Refactor: removed unused relation

24.0.0 (31-07-2019)
- Refactor: changed CurriculumLineLog domain relations from ExecutionSemester to ExecutionInterval
- Refactor: changed ExecutionDegree published exam maps relation from ExecutionSemester to ExecutionInterval
- Refactor: changed StudentStatute domain relations from ExecutionSemester to ExecutionInterval
- Refactor: changed Enrolment, EnrolmentEvaluation, ExternalEnrolment and Credits domain relations from ExecutionSemester to ExecutionInterval

23.0.0 (29-07-2019)
- Refactor: changed TeacherAuthorization domain relations from ExecutionSemester to ExecutionInterval 
- New Fixture: Fiscal addresses. Set fiscal address on fiscal number edition.
- Refactor: Improve person and account addresses edition in Administrative Office, Person and Manager portals

22.0.0 (25-07-2019)
- Refactor: replaced usages of ExecutionSemester by ExecutionInterval 

21.4.0 (23-07-2019)
- Improvement: added support for second nationality

21.3.0 (15-07-2019)
- Improvement: added option to validate precedent degree module at start of year
- Improvement: added curricular period optional relation to curricular rule

21.2.7 (09-07-2019)
- Improvement: added method to findAll competenceCourses (deprecated previous readBolonhaCompetenceCourses)
- Refactor: deprecated MaximumNumberOfCreditsForEnrolmentPeriod rule 

21.2.6 (02-07-2019)
- Improvement: Added information about registration active state (statute creation)
21.2.5 (01-07-2019)
- Improvement: Added new method for enrolment in shifts

21.2.4 (26-06-2019)
- Improvement: Made courses evaluation methods labels consistent 

21.2.3 (24-06-2019)
- Bug Fix: Avoid NPE when Attends State type is not defined yet

21.2.2 (05-06-2019)
- Improvement: Added URL slot to BibliographicReference

21.2.1 (17-05-2019)