@@ -1,3 +1,5 @@
+- Improvement: Person and ExecutionCourse senders name calculated dynamically
+
 24.1.1 (12-08-2019)
 - Improvement: On person creation, create physical address only when physical address data is not empty
 
